<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (c) 2010, The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<resources
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Label for this package -->
    <string
        name="label">Vtiger CRM Road Warrior</string>

    <!-- Permission label -->
    <string
        name="permlab_samplesyncadapterAuthPassword">access to passwords for Sample SyncAdapter accounts</string>
    <!-- Permission description -->
    <string
        name="permdesc_samplesyncadapterAuthPassword">Allows applications direct access to the passwords for the
        Sample SyncAdapter account(s) you have configured.</string>

    <!-- Permission label -->
    <string
        name="permlab_samplesyncadapterAuth">view configured accounts</string>
    <!-- Permission description -->
    <string
        name="permdesc_samplesyncadapterAuth">Allows applications to see the usernames (email addresses) of
        the Sample SyncAdapter account(s) you have configured.</string>
    <string
        name="notification_login_error">Touch to sign into your Sample SyncAdapter account.</string>

       <!-- Title string for diagnoser activity-->
    <string
        name="ui_diagnoser_title">Vtiger roadwarrior debug output </string>
    <!-- Title string for Login activity-->
    <string
        name="ui_activity_title">Sign-in</string>
    <!-- Message shown in progress dialog while app connects to the server -->
    <string
        name="ui_activity_authenticating">Authenticating\u2026</string>

    <!-- AuthenticatorActivity -->
    <skip />
    <!-- Label above username EditText -->
    <string
        name="login_activity_username_label">Username</string>
    <!-- Label above password EditText -->
    <string
        name="login_activity_password_label">Accesskey</string>
    <!-- Button to sign in after entering username and password -->
    <string
        name="login_activity_ok_button">Sign in</string>

    <!-- Message shown in dialog if the username or password is invalid. -->
    <string
        name="login_activity_loginfail_text_both">The url, username or accesskey isn\'t valid. A Vtiger CRM account is
        required. Please try again. </string>
    <!-- Message shown in dialog if the password is invalid -->
    <string
        name="login_activity_loginfail_text_pwonly">You entered the wrong password or your account has changed.
        Please re-enter your password.</string>
    <!-- Message shown in dialog to prompt the user for their password -->
    <string
        name="login_activity_loginfail_text_pwmissing">Type the password for this account.</string>
    <!--
        Message shown if the provided account doesn't support the current
        activity.
    -->
    <string
        name="login_activity_newaccount_text">Sign in to your VTiger CRM account. </string>

    <!-- Button that takes the user to the "sign in" screen -->
    <string
        name="sign_in_button_label">Sign in</string>
    <!-- Button for going to the previous screen or step -->
    <string
        name="back_button_label">Back</string>
    <!-- Button to cancel the current operation -->
    <string
        name="cancel_button_label">Cancel</string>
    <string
        name="profile_action">Sample profile</string>
    <string
        name="view_profile">View Profile</string>
    <string name="vtiger_url">Vtiger url</string>
    <string name="http_label">http://192.168.1.23:81/vtigercrm540</string>
	<string name="login_label">admin</string>
    <string name="accesskey_label"> tSDSEgCe1tLnM6cz</string>
    
    <string name="sync_period_label">Sync period</string>
    
</resources>